# robotsix-auto-mail

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  .stylelintrc.cjs  404.html  =3.1  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  biome.json  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  modules.yaml  pyproject.toml  renovate.json  run_tests.sh  test_placeholder.py  vulture_whitelist.py  zizmor.err
.deps/structlog-26.1.0.dist-info/: RECORD
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  deps-bump.yml  docs.yml  lockfile.yml  pre-commit-autoupdate.yml  pre-commit.yml  release.yml  scan-container.yml  scorecard.yml  secret-scanning.yml
.robotsix-mill/: config.yaml
.robotsix-mill/periodic/: agent_check.yaml  config_sync.yaml  test_gap.yaml  triage_boilerplate.yaml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
architecture/: index.html
changelog/: 20260702T221229Z-consolidate-modules-observability-core-l-7593.misc.md  20260703T082456Z-adopt-towncrier-for-changelog-management-a50b.misc.md  20260703T082456Z-simplify-entrypoint-sh-for-post-config-m-f5e8.removal.md  20260703T085156Z-ci-failure-uv-in-update-1446419417-on-ma-171e.misc.md  20260703T092619Z-ci-fix-out-of-scope-ci-failure-repo-chec-e128.misc.md  20260703T100000Z-deploy-contract-json-only-config.removal.md  20260703T101218Z-standards-round-2-drop-requires-python-u-a525.removal.md  20260703T103000Z-drop-managed-config-artifacts.removal.md  20260703T110407Z-drop-pre-commit-autoupdate-yml-redundant-a748.misc.md  20260703T114033Z-remove-broker-integration-rename-healthz-5ad9.misc.md  20260703T144458Z-add-env-var-resolution-to-resolve-llm-ap-0c9b.misc.md  20260703T151937Z-ci-fix-out-of-scope-ci-failure-shellchec-fbb2.misc.md  20260703T162148Z-test-gap-add-unit-tests-for-src-robotsix-8ead.misc.md  20260703T162148Z-test-gap-add-unit-tests-for-src-robotsix-d241.misc.md  20260703T162148Z-test-gap-add-unit-tests-for-src-robotsix-d2d8.misc.md  20260703T180457Z-migrate-robotsix-auto-mail-to-use-shared-28fc.misc.md  20260703T225054Z-agent-limitation-the-agent-made-six-sequ-77d8.misc.md  20260703T225054Z-optimization-240-observations-12-median-6e9d.misc.md  20260703T232718Z-add-code-of-conduct-md-contributor-coven-cbe8.misc.md  20260704T005011Z-replace-duplicate-config-key-table-in-do-8d05.misc.md  20260704T005011Z-update-docs-architecture-md-to-reflect-c-66b4.misc.md  20260704T032222Z-add-css-custom-properties-layer-to-board-12dc.misc.md  20260704T032222Z-add-stylelint-declaration-strict-value-t-65d4.misc.md  20260704T032222Z-extract-duplicated-launch-background-wor-61ca.misc.md  20260704T032222Z-extract-shared-force-refresh-method-to-e-6b6e.misc.md  20260704T032222Z-split-195-line-card-extra-html-method-in-2cb0.misc.md  20260704T035854Z-add-codeql-yml-using-shared-reusable-wor-d275.misc.md  20260704T035854Z-add-lint-workflows-yml-using-shared-reus-1edb.misc.md  20260704T050008Z-implement-agent-auto-register-changelog-dad5.misc.md  20260704T051132Z-config-drift-stale-key-component-agent-e-4d53.misc.md  20260704T051132Z-remove-stale-component-agent-enabled-config-example-4d53.misc.md  20260704T060804Z-ci-fix-out-of-scope-ci-failure-lint-work-34df.misc.md  20260704T070912Z-ci-fix-out-of-scope-ci-failure-zizmor-ex-78e5.misc.md  20260704T073043Z-ci-fix-out-of-scope-ci-failure-lint-work-d14b.misc.md  20260704T074502Z-ci-skip-python-specific-jobs-when-no-py-8cb9.misc.md  20260704T082208Z-get-healthz-returns-404-container-perman-4432.misc.md  20260704T082208Z-vestigial-volume-data-in-dockerfile-spaw-a319.removal.md  20260704T150328Z-consolidate-duplicated-css-property-bloc-b341.misc.md  20260704T150328Z-extend-mypy-strict-checking-to-cover-tes-7bf1.misc.md  20260704T150328Z-extract-mime-message-composition-from-sm-19a6.feature.md  (+115 more)
codeql-verification/: index.html
config/: config.example.json  config.schema.json  config.yaml  mail.accounts.example.yaml  mail.defaults.yaml  mail.example.toml  mail.local.example.yaml  secrets.example.yaml
configuration/: index.html
connecting/: index.html
decisions/0001-programming-language/: index.html
dependencies/: index.html
deploy/: .env.example  README.md  docker-compose.yml
deploy/nginx/: mail.robotsix.net.conf
deployment/: index.html
dev/: auto-mail-autoupdate.sh
docs/: CHANGELOG.md  CONTRIBUTING.md  agent-communication-architecture.md  architecture.md  board-agent.md  codeql-verification.md  configuration.md  connecting.md  dependencies.md  deployment.md  index.md  ingestion.md  modules.yaml  skill.md  testing.md  troubleshooting.md
docs/config/: mail.local.example.yaml
docs/server/: component-agent.md
ingestion/: index.html
pip-packages/ruff-0.15.16.dist-info/: RECORD
scripts/: check_config_sync.py  smoke_board.sh
scripts/ci/: check_kind_literals.py
scripts/config/: check_config_sync.py
scripts/dev/: auto-mail-autoupdate.sh
scripts/modules/: check_module_registration.py
scripts/server/: smoke_board.sh
search/: search_index.json
skill/: index.html
src/robotsix_auto_mail/: __init__.py  _base_client.py  _constants.py  _llm_agent.py  archive.py  autoupdate.py  board_adapter.py  cli.py  config.py  config_sync.py  db.py  detect.py  errors.py  fetch.py  format.py  health.py  imap.py  lifespan.py  logging_config.py  mime.py  parser.py  pipeline.py  server.py  smtp_client.py  status.py  tracing.py  triage.py
testing/: index.html
tests/: conftest.py  test_board_agent.py  test_cli.py  test_config.py  test_config_sync.py  test_db.py  test_detect.py  test_fetch.py  test_imap.py  test_parser.py  test_pipeline.py  test_server.py  test_smtp_client.py  test_status.py  test_stub.py
tests/_shared/: test_pydantic_utils.py
tests/archive/: test_archive.py
tests/calendar/: conftest.py  (+3 more)
troubleshooting/: index.html
(+299 files in other folders)
