[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-auto-mail"
version = "0.0.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "urllib3>=2.0",
    "pydantic>=2.0",
    "robotsix-board",
    "robotsix-llmio",
    "structlog>=24.1",
    "robotsix-yaml-config",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-xdist",
    "pytest-cov>=7.1.0",
    "hypothesis>=6",
    "deptry",
    "hatchling",
    # pyyaml is no longer used by the package itself (YAML loading is delegated
    # to robotsix-yaml-config); it remains a dev-only need for the CI helper
    # scripts/config/check_config_sync.py, which imports `yaml` directly.
    "pyyaml>=6.0",
    "types-PyYAML",
    "robotsix-llmio[openrouter-deepseek,tracing]",
    # robotsix-modules provides the CLI used by CI / pre-commit to validate and
    # check registration of docs/modules.yaml. It is tooling only (never imported
    # by the package), so it lives in the dev extra (exempt from deptry DEP002).
    "robotsix-modules",
    # vulture: dead-code detection (CI + pre-commit gate).
    "vulture>=2.16",
    # zizmor: GitHub Actions security scanning (CI + pre-commit gate).
    "zizmor",
]
llm = [
    "robotsix-llmio[openrouter-deepseek,tracing]",
]
microsoft = [
    "msal>=1.28",
]
board-agent = [
    "robotsix-board-agent",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.ruff]
target-version = "py312"
src = ["src"]
# vulture_whitelist.py is a generated dead-code allowlist: bare attribute
# references (B018 "useless expression"), late imports (E402), and unsorted
# imports (I001) are inherent to its format, not real lint issues.
extend-exclude = ["vulture_whitelist.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "S", "B", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/robotsix_auto_mail/detect.py" = ["E501"]
# Tests are exempt from line-length (long fixture strings, docstrings, and
# inline `# pragma: allowlist secret` comments) and from N802 (fake IMAP
# server handlers are named after protocol verbs: _cmd_LOGIN, _cmd_LIST...).
"tests/**/*.py" = ["S101", "S105", "S106", "E501", "N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require a real or emulated network service (IMAP, SMTP, HTTP)",
    "slow: heavier property-based / fuzz tests (large example counts)",
]

[tool.coverage.run]
source = ["src/robotsix_auto_mail"]
relative_files = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.bandit]
skips = ["B107"]

[project.scripts]
robotsix-auto-mail = "robotsix_auto_mail.cli:main"
robotsix-autoupdate = "robotsix_auto_mail.dev.autoupdate:main"

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["src/robotsix_auto_mail"]

[[tool.mypy.overrides]]
module = "robotsix_board"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "robotsix_board_agent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "robotsix_agent_comm"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "msal"
ignore_missing_imports = true

[tool.deptry]
# Treat everything under [project.optional-dependencies][dev] (ruff, mypy,
# pytest, hatchling, types-PyYAML, robotsix-llmio, deptry) as dev-only.
# Dev deps are exempt from DEP002 (unused) regardless of whether tests/
# actually imports them.
optional_dependencies_dev_groups = ["dev", "docs"]
# deptry doesn't infer the src-layout first-party package name reliably
# (the built robotsix_auto_mail is also installed in the env), so it
# mis-flags intra-package imports as DEP003 transitive. Declare it.
known_first_party = ["robotsix_auto_mail"]
# scripts/ is dev-only repo tooling (config-sync checker, etc.), not part
# of the shipped package; its imports (e.g. PyYAML, a dev dep) shouldn't
# be audited against the package's runtime deps.
extend_exclude = ["scripts"]

[tool.deptry.per_rule_ignores]
# pydantic_ai is pulled in transitively via robotsix-llmio[openrouter-deepseek]
# (declared in the [llm] extra); the lazy import in detect.py is intentional.
DEP003 = ["pydantic_ai"]
# robotsix_agent_comm is a transitive dependency of the optional
# [board-agent] extra (robotsix-board-agent). The import in board_agent.py
# is guarded by try/except ImportError so the server gracefully degrades
# when the extra is not installed.
DEP001 = ["robotsix_agent_comm"]

[tool.vulture]
paths = ["src/robotsix_auto_mail"]
# ``log_message`` overrides the stdlib handler and discards every parameter;
# ``format`` shadows the builtin and cannot be whitelisted via a file-level
# reference (it is a local inside a method body).
# ``method_name`` is a required positional argument of the structlog
# processor protocol ``(logger, method_name, event_dict)``; ``_add_trace_id``
# does not need it but cannot drop it from the signature.
ignore_names = ["format", "method_name"]

[tool.uv.sources]
robotsix-board = { git = "https://github.com/damien-robotsix/robotsix-board.git", rev = "main" }
robotsix-board-agent = { git = "https://github.com/damien-robotsix/robotsix-board-agent.git", rev = "main" }
robotsix-llmio = { git = "https://github.com/damien-robotsix/robotsix-llmio.git", rev = "main" }
robotsix-yaml-config = { git = "https://github.com/damien-robotsix/robotsix-yaml-config.git", rev = "main" }
robotsix-modules = { git = "https://github.com/damien-robotsix/robotsix-modules.git", rev = "main" }
