[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-auto-mail"
version = "0.0.0"
description = "Automated mail ingestion, triage, and kanban board — IMAP fetch, SMTP send, LLM triage, SQLite storage"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
keywords = ["mail", "imap", "smtp", "triage", "kanban"]
dependencies = [
    "urllib3>=2.7.0",
    "pydantic>=2.0",
    "robotsix-board",
    "robotsix-llmio",
    "structlog>=24.1",
    "robotsix-yaml-config",
]

[project.urls]
Homepage = "https://github.com/damien-robotsix/robotsix-auto-mail"
Repository = "https://github.com/damien-robotsix/robotsix-auto-mail"
Documentation = "https://damien-robotsix.github.io/robotsix-auto-mail/"
Issues = "https://github.com/damien-robotsix/robotsix-auto-mail/issues"
Changelog = "https://github.com/damien-robotsix/robotsix-auto-mail/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-xdist",
    "pytest-cov>=7.1.0",
    "hypothesis>=6",
    "deptry",
    "hatchling",
    # pyyaml is no longer used by the package itself (YAML loading is delegated
    # to robotsix-yaml-config); it remains a dev-only need for the CI helper
    # scripts/config/check_config_sync.py, which imports `yaml` directly.
    "pyyaml>=6.0.3",
    "types-PyYAML",
    "robotsix-llmio[openrouter,tracing]",
    # robotsix-modules provides the CLI used by CI / pre-commit to validate and
    # check registration of docs/modules.yaml. It is tooling only (never imported
    # by the package), so it lives in the dev extra (exempt from deptry DEP002).
    "robotsix-modules",
    # vulture: dead-code detection (CI + pre-commit gate).
    "vulture>=2.16",
    # zizmor: GitHub Actions security scanning (CI + pre-commit gate).
    "zizmor",
    # robotsix-agent-comm: component-agent protocol used by the server
    # (_component_agent_config_contract, _component_agent_responder) and
    # their tests.  Declared here so the dev extra (used by CI) can import
    # ConfigContractError and run the config-contract test suite.
    "robotsix-agent-comm",
]
llm = [
    "robotsix-llmio[openrouter,tracing]",
]
microsoft = [
    "msal>=1.28",
]
# Calendar (Add to Calendar) integration — talks to the robotsix-calendar
# agent over the agent-comm broker. Optional so the core mail server has no
# hard dependency; install with `.[calendar]` (the deployed image does).
calendar = [
    "robotsix-agent-comm",
]
# Alias for documentation clarity — same package as the calendar extra.
broker = [
    "robotsix-agent-comm",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.ruff]
target-version = "py314"
src = ["src"]
# vulture_whitelist.py is a generated dead-code allowlist: bare attribute
# references (B018 "useless expression"), late imports (E402), and unsorted
# imports (I001) are inherent to its format, not real lint issues.
extend-exclude = ["vulture_whitelist.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "S", "B", "N", "RUF", "ANN", "PT", "UP", "SIM"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"src/robotsix_auto_mail/detect.py" = ["E501"]
# Tests are exempt from line-length (long fixture strings, docstrings, and
# inline `# pragma: allowlist secret` comments) and from N802 (fake IMAP
# server handlers are named after protocol verbs: _cmd_LOGIN, _cmd_LIST...).
"tests/**/*.py" = ["S101", "S105", "S106", "E501", "N802", "ANN001", "ANN003", "ANN201", "ANN202", "UP", "SIM"]
"scripts/**/*.py" = ["UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require a real or emulated network service (IMAP, SMTP, HTTP)",
    "slow: heavier property-based / fuzz tests (large example counts)",
]

[tool.coverage.run]
source = ["src/robotsix_auto_mail"]
relative_files = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.bandit]
skips = ["B107"]

[project.scripts]
robotsix-auto-mail = "robotsix_auto_mail.cli:main"
[tool.mypy]
strict = true
python_version = "3.14"
packages = ["src/robotsix_auto_mail"]

[[tool.mypy.overrides]]
module = "robotsix_board"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "robotsix_agent_comm"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "robotsix_agent_comm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "msal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "robotsix_yaml_config"
ignore_missing_imports = true

[tool.deptry]
# Treat everything under [project.optional-dependencies][dev] (ruff, mypy,
# pytest, hatchling, types-PyYAML, robotsix-llmio, deptry) as dev-only.
# Dev deps are exempt from DEP002 (unused) regardless of whether tests/
# actually imports them.
optional_dependencies_dev_groups = ["dev", "docs"]
# deptry doesn't infer the src-layout first-party package name reliably
# (the built robotsix_auto_mail is also installed in the env), so it
# mis-flags intra-package imports as DEP003 transitive. Declare it.
known_first_party = ["robotsix_auto_mail"]
# scripts/ is dev-only repo tooling (config-sync checker, etc.), not part
# of the shipped package; its imports (e.g. PyYAML, a dev dep) shouldn't
# be audited against the package's runtime deps.
extend_exclude = ["scripts"]

[tool.deptry.per_rule_ignores]
# pydantic_ai is pulled in transitively via robotsix-llmio[openrouter]
# (declared in the [llm] extra); the lazy import in detect.py is intentional.
DEP003 = ["pydantic_ai"]
# structlog is no longer imported directly by this package (logging has been
# migrated to robotsix_llmio.logging.setup_logging), but it must remain a
# direct dependency to preserve the uv dependency resolution order.
# robotsix_agent_comm is declared in the optional [calendar]/[broker] extras
# but is not imported anywhere in the package today, so it would otherwise be
# flagged as an unused (DEP002) dependency. The extra is retained for the
# optional agent-comm integration.
DEP002 = ["structlog", "robotsix-agent-comm"]

[tool.vulture]
paths = ["src/robotsix_auto_mail"]
# ``log_message`` overrides the stdlib handler and discards every parameter;
# ``format`` shadows the builtin and cannot be whitelisted via a file-level
# reference (it is a local inside a method body).
# ``method_name`` is a required positional argument of the structlog
# processor protocol ``(logger, method_name, event_dict)``; ``_add_trace_id``
# does not need it but cannot drop it from the signature.
ignore_names = ["format", "method_name", "on_notification"]

[tool.uv.sources]
robotsix-agent-comm = { git = "https://github.com/damien-robotsix/robotsix-agent-comm.git", rev = "e5e6d85ef51b4e68ad284e1180ced8d396310ce2" }
robotsix-board = { git = "https://github.com/damien-robotsix/robotsix-board.git", rev = "a364bf5116dcea5c35b036d158d2f3e47b8caeec" }
robotsix-llmio = { git = "https://github.com/damien-robotsix/robotsix-llmio.git", rev = "3da3c4317f4a" }  # pragma: allowlist secret
robotsix-yaml-config = { git = "https://github.com/damien-robotsix/robotsix-yaml-config.git", rev = "8a64b2c1382c91763cafccb0c33b1b22de409628" }  # pre-rename robotsix-yaml-config; migrating to robotsix-config
robotsix-modules = { git = "https://github.com/damien-robotsix/robotsix-modules.git", rev = "8a40eee6130d5e005148bb9ddf85e1af7f7dee4f" }
