[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-auto-mail"
version = "0.0.0"
description = "Automated mail ingestion, triage, and kanban board — IMAP fetch, SMTP send, LLM triage, SQLite storage"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
keywords = ["mail", "imap", "smtp", "triage", "kanban"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "robotsix-board",
    "robotsix-http",
    "robotsix-llmio",
    "structlog>=24.1",
    "robotsix-config",
]

[project.urls]
Homepage = "https://github.com/damien-robotsix/robotsix-auto-mail"
Repository = "https://github.com/damien-robotsix/robotsix-auto-mail"
Documentation = "https://damien-robotsix.github.io/robotsix-auto-mail/"
Issues = "https://github.com/damien-robotsix/robotsix-auto-mail/issues"
Changelog = "https://github.com/damien-robotsix/robotsix-auto-mail/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-xdist",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.156.1",
    "deptry",
    "hatchling",
    # pyyaml is kept as a dev-only need for the CI helper
    # scripts/config/check_config_sync.py, which imports `yaml` directly.
    # Also used by the `migrate-config` CLI command for one-shot YAML→JSON
    # conversion of legacy config files.
    "pyyaml>=6.0.3",
    "types-PyYAML",
    "robotsix-llmio[openrouter,tracing]",
    # robotsix-modules provides the CLI used by CI / pre-commit to validate and
    # check registration of docs/modules.yaml. It is tooling only (never imported
    # by the package), so it lives in the dev extra (exempt from deptry DEP002).
    "robotsix-modules",
    # vulture: dead-code detection (CI + pre-commit gate).
    "vulture>=2.16",
    # zizmor: GitHub Actions security scanning (CI + pre-commit gate).
    "zizmor",
    # towncrier: changelog fragment management (dev/release tooling).
    "towncrier",
    # pytest-timeout: kills hung tests instead of waiting for the job timeout
    # (default 6 hours on GitHub Actions). Configured under [tool.pytest.ini_options].
    "pytest-timeout",
]
llm = [
    "robotsix-llmio[openrouter,tracing]",
]
microsoft = [
    "msal>=1.28",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.ruff]
target-version = "py314"
src = ["src"]
# vulture_whitelist.py is a generated dead-code allowlist: bare attribute
# references (B018 "useless expression"), late imports (E402), and unsorted
# imports (I001) are inherent to its format, not real lint issues.
extend-exclude = ["vulture_whitelist.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "S", "B", "N", "RUF", "ANN", "PT", "UP", "SIM"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"src/robotsix_auto_mail/detect.py" = ["E501"]
# Tests are exempt from line-length (long fixture strings, docstrings, and
# inline `# pragma: allowlist secret` comments) and from N802 (fake IMAP
# server handlers are named after protocol verbs: _cmd_LOGIN, _cmd_LIST...).
"tests/**/*.py" = ["S101", "S105", "S106", "E501", "N802", "ANN001", "ANN003", "ANN201", "ANN202", "UP", "SIM"]
"scripts/**/*.py" = ["UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require a real or emulated network service (IMAP, SMTP, HTTP)",
    "slow: heavier property-based / fuzz tests (large example counts)",
]
# pytest-timeout: kill genuinely hung tests instead of wasting CI minutes.
# Baselines measured 2026-07-20 on this codebase (single-threaded, no coverage):
#   longest single test:  ~4 s  (test_config_sync_text_output)
#   full suite wall time: ~75 s (1668 tests)
# These limits include a large safety margin (several× the observed worst case).
# If a test hits the per-test timeout, check whether it is truly deadlocked or
# just needs the limit bumped — the timeout value and test id are logged.
timeout = 30
session_timeout = 900

[tool.coverage.run]
source = ["src/robotsix_auto_mail"]
relative_files = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.bandit]
skips = ["B107"]

[project.scripts]
robotsix-auto-mail = "robotsix_auto_mail.cli:main"
[tool.mypy]
strict = true
python_version = "3.14"
packages = ["src/robotsix_auto_mail", "tests"]

[[tool.mypy.overrides]]
module = "tests"
strict = false
check_untyped_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "robotsix_board"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "msal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "robotsix_config"
ignore_missing_imports = true

[tool.deptry]
# Treat everything under [project.optional-dependencies][dev] (ruff, mypy,
# pytest, hatchling, types-PyYAML, robotsix-llmio, deptry) as dev-only.
# Dev deps are exempt from DEP002 (unused) regardless of whether tests/
# actually imports them.
optional_dependencies_dev_groups = ["dev", "docs"]
# deptry doesn't infer the src-layout first-party package name reliably
# (the built robotsix_auto_mail is also installed in the env), so it
# mis-flags intra-package imports as DEP003 transitive. Declare it.
known_first_party = ["robotsix_auto_mail"]
# scripts/ is dev-only repo tooling (config-sync checker, etc.), not part
# of the shipped package; its imports (e.g. PyYAML, a dev dep) shouldn't
# be audited against the package's runtime deps.
extend_exclude = ["scripts"]

[tool.deptry.per_rule_ignores]
# pydantic_ai is pulled in transitively via robotsix-llmio[openrouter]
# (declared in the [llm] extra); the lazy import in detect.py is intentional.
DEP003 = ["pydantic_ai", "httpx"]
# structlog is no longer imported directly by this package (logging has been
# migrated to robotsix_llmio.logging.setup_logging), but it must remain a
# direct dependency to preserve the uv dependency resolution order.
DEP002 = ["structlog"]
# pyyaml / yaml is declared as a dev dependency (used by CI helpers and the
# migrate-config CLI command) but is imported at runtime by cli/config.py
# for legacy config migration.
DEP004 = ["yaml"]

[tool.vulture]
paths = ["src/robotsix_auto_mail"]
# ``log_message`` overrides the stdlib handler and discards every parameter;
# ``format`` shadows the builtin and cannot be whitelisted via a file-level
# reference (it is a local inside a method body).
# ``method_name`` is a required positional argument of the structlog
# processor protocol ``(logger, method_name, event_dict)``; ``_add_trace_id``
# does not need it but cannot drop it from the signature.
ignore_names = ["format", "method_name"]

[tool.uv.sources]
robotsix-board = { git = "https://github.com/damien-robotsix/robotsix-board.git", rev = "a364bf5116dcea5c35b036d158d2f3e47b8caeec" }  # pragma: allowlist secret
robotsix-llmio = { git = "https://github.com/damien-robotsix/robotsix-llmio.git", rev = "3da3c4317f4a" }  # pragma: allowlist secret
robotsix-config = { git = "https://github.com/damien-robotsix/robotsix-config.git", rev = "424f8ec5140e14e9699b92d5c3755d929625b570" }  # pragma: allowlist secret
robotsix-http = { git = "https://github.com/damien-robotsix/robotsix-http.git", rev = "a3b4d2280bea1acd858759e564aa22963c616111" }  # pragma: allowlist secret
robotsix-modules = { git = "https://github.com/damien-robotsix/robotsix-modules.git", rev = "8a40eee6130d5e005148bb9ddf85e1af7f7dee4f" }  # pragma: allowlist secret

[tool.towncrier]
package = "robotsix_auto_mail"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog"
title_format = "## {version} ({project_date})"
underlines = ["", "", ""]
issue_format = "https://github.com/damien-robotsix/robotsix-auto-mail/issues/{issue}"

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals and deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "misc"
  name = "Miscellaneous"
  showcontent = true
